[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/char_bar_health.png" type="Texture" id=1]
[ext_resource path="res://ui/char_bar_health_bg.png" type="Texture" id=2]
[ext_resource path="res://ui/char_bar_health_icon.png" type="Texture" id=3]
[ext_resource path="res://ui/test_font/ntesmall.fnt" type="BitmapFont" id=4]
[ext_resource path="res://ui/char_resource_bar.gd" type="Script" id=5]

[node name="ResourceBar" type="MarginContainer"]
margin_right = 162.0
margin_bottom = 16.0
custom_constants/margin_right = 2
custom_constants/margin_top = 1
custom_constants/margin_left = 2
custom_constants/margin_bottom = -1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconBarAdjust" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 17.0
custom_constants/margin_top = 1
custom_constants/margin_left = 0
custom_constants/margin_bottom = 1

[node name="IconBarRow" type="HBoxContainer" parent="IconBarAdjust"]
margin_top = 1.0
margin_right = 158.0
margin_bottom = 15.0

[node name="Icon" type="TextureRect" parent="IconBarAdjust/IconBarRow"]
margin_right = 12.0
margin_bottom = 14.0
texture = ExtResource( 3 )

[node name="BarAdjust" type="MarginContainer" parent="IconBarAdjust/IconBarRow"]
margin_left = 16.0
margin_right = 158.0
margin_bottom = 14.0
custom_constants/margin_top = 1
custom_constants/margin_bottom = 1

[node name="Bar" type="TextureProgress" parent="IconBarAdjust/IconBarRow/BarAdjust"]
margin_top = 1.0
margin_right = 142.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 12 )
max_value = 20.0
value = 10.0
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="Value" type="Label" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 160.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.996078, 0.796078, 1 )
custom_constants/shadow_as_outline = 1
text = "10/20"
align = 1
